# Ur5e_workcell

./: README.md
ur5e_workcell/: CMakeLists.txt  package.xml
ur5e_workcell/meshes/: Position_Point.stl  fixture_table.stl  workcell_table.stl
ur5e_workcell/meshes/meshes_Box1/: Position_line1.stl  base_link_BOX1.stl
ur5e_workcell/meshes/meshes_Box2/: Position_line2.stl  base_link_BOX2.stl
ur5e_workcell/meshes/meshes_Box3/: Position_line3.stl  base_link_BOX3.stl
ur5e_workcell/urdf/: Box1.urdf  Box2.urdf  Box3.urdf  Position_Point.urdf  workcell.urdf  workcell_table.urdf
